# libolecf

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  dtfabric.yaml  libolecf-wiki.ini  libolecf.ini  libolecf.pc.in  libolecf.spec.in  pyproject.toml.in  setup.cfg.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  synctestdata.ps1  synctestdata.sh  tox.ini
.travis/: runtests.sh  script.sh
common/: config_winapi.h
documentation/: OLE Compound File format.asciidoc
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libolecf.h.in
include/libolecf/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  ole.h  types.h.in
libolecf/: Makefile.am  libolecf.c  libolecf.rc.in  libolecf_allocation_table.c  libolecf_allocation_table.h  libolecf_codepage.h  libolecf_compound_object_stream.c  libolecf_compound_object_stream.h  libolecf_debug.c  libolecf_debug.h  libolecf_definitions.h.in  libolecf_directory_entry.c  libolecf_directory_entry.h  libolecf_directory_list.c  libolecf_directory_list.h  libolecf_directory_tree.c  libolecf_directory_tree.h  libolecf_error.c  libolecf_error.h  libolecf_extern.h  libolecf_file.c  libolecf_file.h  libolecf_file_header.c  libolecf_file_header.h  libolecf_io_handle.c  libolecf_io_handle.h  libolecf_item.c  libolecf_item.h  libolecf_libbfio.h  libolecf_libcdata.h  libolecf_libcerror.h  libolecf_libclocale.h  libolecf_libcnotify.h  libolecf_libcstring.h  libolecf_libfdatetime.h  libolecf_libfguid.h  libolecf_libfole.h  libolecf_libfvalue.h  libolecf_libfwps.h  libolecf_libuna.h  (+21 more)
m4/: yaltools.m4
manuals/: Makefile.am  libolecf.3  olecfexport.1  olecfinfo.1  olecfmount.1
msvscpp/: Makefile.am  libolecf.sln
msvscpp/dokan/: dokan.vcproj
msvscpp/libfole/: libfole.vcproj
msvscpp/libfwps/: libfwps.vcproj
msvscpp/libolecf/: libolecf.vcproj
msvscpp/olecf_test_allocation_table/: olecf_test_allocation_table.vcproj
msvscpp/olecf_test_directory_entry/: olecf_test_directory_entry.vcproj
msvscpp/olecf_test_error/: olecf_test_error.vcproj
msvscpp/olecf_test_file/: olecf_test_file.vcproj
msvscpp/olecf_test_file_header/: olecf_test_file_header.vcproj
msvscpp/olecf_test_get_version/: olecf_test_get_version.vcproj
msvscpp/olecf_test_io_handle/: olecf_test_io_handle.vcproj
msvscpp/olecf_test_item/: olecf_test_item.vcproj
msvscpp/olecf_test_notify/: olecf_test_notify.vcproj
msvscpp/olecf_test_open_close/: olecf_test_open_close.vcproj
msvscpp/olecf_test_property_section/: olecf_test_property_section.vcproj
msvscpp/olecf_test_property_set/: olecf_test_property_set.vcproj
msvscpp/olecf_test_property_value/: olecf_test_property_value.vcproj
msvscpp/olecf_test_set_ascii_codepage/: olecf_test_set_ascii_codepage.vcproj
msvscpp/olecf_test_support/: olecf_test_support.vcproj
msvscpp/olecf_test_tools_info_handle/: olecf_test_tools_info_handle.vcproj
msvscpp/olecf_test_tools_mount_path_string/: olecf_test_tools_mount_path_string.vcproj
msvscpp/olecf_test_tools_output/: olecf_test_tools_output.vcproj
msvscpp/olecf_test_tools_signal/: olecf_test_tools_signal.vcproj
msvscpp/olecfexport/: olecfexport.vcproj
msvscpp/olecfinfo/: olecfinfo.vcproj
msvscpp/olecfmount/: olecfmount.vcproj
msvscpp/pyolecf/: pyolecf.vcproj
olecftools/: Makefile.am  export_handle.c  export_handle.h  info_handle.c  info_handle.h  log_handle.c  log_handle.h  mount_dokan.c  mount_dokan.h  mount_file_entry.c  mount_file_entry.h  mount_file_system.c  mount_file_system.h  mount_fuse.c  mount_fuse.h  mount_handle.c  mount_handle.h  mount_path_string.c  mount_path_string.h  olecfexport  olecfexport.c  olecfinfo  olecfinfo.c  olecfmount  olecfmount.c  olecfoutput.c  olecfoutput.h  olecftools_getopt.c  olecftools_getopt.h  olecftools_i18n.h  olecftools_libbfio.h  olecftools_libcerror.h  olecftools_libcfile.h  olecftools_libclocale.h  olecftools_libcnotify.h  olecftools_libcpath.h  olecftools_libcstring.h  olecftools_libcsystem.h  olecftools_libfdatetime.h  olecftools_libfguid.h  (+8 more)
ossfuzz/: Makefile.am  file_fuzzer.cc  item_fuzzer.cc  (+1 more)
pyolecf/: Makefile.am  pyolecf.c  pyolecf.h  pyolecf_codepage.c  pyolecf_codepage.h  pyolecf_datetime.c  pyolecf_datetime.h  pyolecf_error.c  pyolecf_error.h  pyolecf_file.c  pyolecf_file.h  pyolecf_file_object_io_handle.c  pyolecf_file_object_io_handle.h  pyolecf_guid.c  pyolecf_guid.h  pyolecf_integer.c  pyolecf_integer.h  pyolecf_item.c  pyolecf_item.h  pyolecf_item_types.c  pyolecf_item_types.h  pyolecf_items.c  pyolecf_items.h  pyolecf_libbfio.h  pyolecf_libcerror.h  pyolecf_libclocale.h  pyolecf_libcstring.h  pyolecf_libfguid.h  pyolecf_libolecf.h  pyolecf_property_section.c  pyolecf_property_section.h  pyolecf_property_sections.c  pyolecf_property_sections.h  pyolecf_property_set.c  pyolecf_property_set.h  pyolecf_property_set_stream.c  pyolecf_property_set_stream.h  pyolecf_property_value.c  pyolecf_property_value.h  pyolecf_property_values.c  (+8 more)
pyolecf-python3/: Makefile.am
tests/: Makefile.am  atlocal.in  olecf_test_allocation_table.c  olecf_test_directory_entry.c  olecf_test_error.c  olecf_test_file.c  olecf_test_file_header.c  olecf_test_functions.c  olecf_test_functions.h  olecf_test_get_version.c  olecf_test_getopt.c  olecf_test_getopt.h  olecf_test_io_handle.c  olecf_test_item.c  olecf_test_libbfio.h  olecf_test_libcdata.h  olecf_test_libcerror.h  olecf_test_libclocale.h  olecf_test_libcnotify.h  olecf_test_libcpath.h  olecf_test_libcstring.h  olecf_test_libcsystem.h  olecf_test_libolecf.h  olecf_test_libuna.h  olecf_test_macros.h  olecf_test_memory.c  olecf_test_memory.h  olecf_test_notify.c  olecf_test_open_close.c  olecf_test_property_section.c  olecf_test_property_set.c  olecf_test_property_value.c  olecf_test_set_ascii_codepage.c  olecf_test_support.c  olecf_test_tools_info_handle.c  olecf_test_tools_mount_path_string.c  olecf_test_tools_output.c  olecf_test_tools_signal.c  olecf_test_unused.h  pkgbuild.sh  (+27 more)
tests/data/: file_header.1  property_section_list_entry.1  property_set_header.1
(+5 files in other folders)
