include_HEADERS = \
	libolecf.h

pkginclude_HEADERS = \
	libolecf/codepage.h \
	libolecf/definitions.h \
	libolecf/error.h \
	libolecf/extern.h \
	libolecf/features.h \
	libolecf/ole.h \
	libolecf/types.h

EXTRA_DIST = \
	libolecf.h.in \
	libolecf/definitions.h.in \
	libolecf/features.h.in \
	libolecf/types.h.in

DISTCLEANFILES = \
	libolecf.h \
	libolecf/definitions.h \
	libolecf/features.h \
	libolecf/types.h \
	Makefile \
	Makefile.in

