MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfole/libfole.vcproj \
	libfvalue/libfvalue.vcproj \
	libfwps/libfwps.vcproj \
	libolecf/libolecf.vcproj \
	libuna/libuna.vcproj \
	olecf_test_allocation_table/olecf_test_allocation_table.vcproj \
	olecf_test_directory_entry/olecf_test_directory_entry.vcproj \
	olecf_test_error/olecf_test_error.vcproj \
	olecf_test_file/olecf_test_file.vcproj \
	olecf_test_file_header/olecf_test_file_header.vcproj \
	olecf_test_io_handle/olecf_test_io_handle.vcproj \
	olecf_test_item/olecf_test_item.vcproj \
	olecf_test_notify/olecf_test_notify.vcproj \
	olecf_test_property_section/olecf_test_property_section.vcproj \
	olecf_test_property_set/olecf_test_property_set.vcproj \
	olecf_test_property_value/olecf_test_property_value.vcproj \
	olecf_test_support/olecf_test_support.vcproj \
	olecfexport/olecfexport.vcproj \
	olecfinfo/olecfinfo.vcproj \
	olecfmount/olecfmount.vcproj \
	pyolecf/pyolecf.vcproj \
	libolecf.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

